Incorrect assignment of Smoothing Groups on export #36636

Closed
opened 2013-09-02 11:59:51 +02:00 by Mariachi Maltesers · 9 comments

%%%Smoothing groups aren't correctly assigned and exported in the obj exporter.

As an example I tested a simple cube with all edges sharp (Blender_Mesh.jpg).

In this example smoothing groups should be assigned, so
that no face is in the same smoothing group which isn't the case (How_SG_Are_Exported_RightNow.jpg).

Also, I attach a Blender exported obj file, 3ds Max desired behaviour obj file
and an image showing how smoothing groups should be assigned.

%%%

%%%Smoothing groups aren't correctly assigned and exported in the obj exporter. As an example I tested a simple cube with all edges sharp (Blender_Mesh.jpg). In this example smoothing groups should be assigned, so that no face is in the same smoothing group which isn't the case (How_SG_Are_Exported_RightNow.jpg). Also, I attach a Blender exported obj file, 3ds Max desired behaviour obj file and an image showing how smoothing groups should be assigned. %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Blender version: 2.68a %%%

%%%Blender version: 2.68a %%%

%%%I guess 3ds max expects smoothing groups as bits? I don't know if that's part of the OBJ standard, but at least FBX seems to expect that too:
http://docs.autodesk.com/FBX/2013/ENU/FBX-SDK-Documentation/index.html?url=cpp_ref/class_fbx_geometry_converter.html,topicNumber=cpp_ref_class_fbx_geometry_converter_html,hash=a558faac41b53bc7daafa36d71fffe27d%%%

%%%I guess 3ds max expects smoothing groups as bits? I don't know if that's part of the OBJ standard, but at least FBX seems to expect that too: http://docs.autodesk.com/FBX/2013/ENU/FBX-SDK-Documentation/index.html?url=cpp_ref/class_fbx_geometry_converter.html,topicNumber=cpp_ref_class_fbx_geometry_converter_html,hash=a558faac41b53bc7daafa36d71fffe27d%%%

%%%Yes, indeed… working on this (as with only 32 possible value, we have to be able to reuse same bit for different non-contiguous smooth groups :/ ).%%%

%%%Yes, indeed… working on this (as with only 32 possible value, we have to be able to reuse same bit for different non-contiguous smooth groups :/ ).%%%

%%%Think it’s fixed in r59743, thanks for the report! :)%%%

%%%Think it’s fixed in r59743, thanks for the report! :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%Actually, we do not always want to export smooth groups as bitflags, so now you have the choice (either simple incrementing values for each group, of bitflags reused for many (non-contiguous) groups...%%%

%%%Actually, we do not always want to export smooth groups as bitflags, so now you have the choice (either simple incrementing values for each group, of bitflags reused for many (non-contiguous) groups...%%%

%%%
I tested it with a couple of quite complex models,
works absolutely perfect!

There will be just one smoothing groups checkbox finally though, right?%%%

%%% I tested it with a couple of quite complex models, works absolutely perfect! There will be just one smoothing groups checkbox finally though, right?%%%

%%%@Mariachi Maltesers, no, because OBJ defines each number as a different smooth group, there is no mention of using then as bitflags, this is an incorrect interpretation of smooth-groups, but worth supporting since it seems some applications expect it.%%%

%%%@Mariachi Maltesers, no, because OBJ defines each number as a different smooth group, there is no mention of using then as bitflags, this is an incorrect interpretation of smooth-groups, but worth supporting since it seems some applications expect it.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36636
No description provided.